fix issue on testimonials class by adding missing column-gap attribute value

--- a/css/style.css
+++ b/css/style.css
@@ -335,7 +335,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   row-gap: 4.8rem;
-  column-gap: ;
+  column-gap: 8rem;
 }
 
 .testimonial-img {
